<resources>
    <string name="app_name">Android Base de Datos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="snom">Nombre:</string>
    <string name="ins">Alta</string>
    <string name="sid">Id:</string>
    <string name="del">Borrar</string>
    <string name="upd">Actualizar</string>
    <string name="sel">Seleccionar</string>
    <string name="cons">Lista</string>
</resources>